--- a/Mercedes Benz/Mercedes Benz/Base.lproj/LaunchScreen.storyboard
+++ b/Mercedes Benz/Mercedes Benz/Base.lproj/LaunchScreen.storyboard
@@ -23,7 +23,7 @@
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="logo.jpeg" translatesAutoresizingMaskIntoConstraints="NO" id="Fc9-CW-x5W">
                                 <rect key="frame" x="67" y="222" width="240" height="223"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <autoresizingMask key="autoresizingMask"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
