--- a/Mercedes Benz/Mercedes Benz/Base.lproj/Main.storyboard
+++ b/Mercedes Benz/Mercedes Benz/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="Efq-da-ipf">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -9,10 +9,26 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Navigation Controller-->
+        <scene sceneID="UOS-gX-X8o">
+            <objects>
+                <navigationController id="Efq-da-ipf" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Rha-mF-0kT">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="vbe-3v-yb0"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Zha-2T-c5h" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-772" y="124"/>
+        </scene>
+        <!--Vista 1-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Mercedes_Benz" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController title="Vista 1" id="BYZ-38-t0r" customClass="ViewController" customModule="Mercedes_Benz" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -74,6 +90,7 @@
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </view>
+                    <navigationItem key="navigationItem" id="WF2-0a-lyk"/>
                     <connections>
                         <outlet property="color" destination="JYf-Ka-rkv" id="1lQ-yO-FI3"/>
                         <outlet property="imagen" destination="fAI-5M-kN7" id="xwc-kM-K9n"/>
@@ -84,10 +101,10 @@
             </objects>
             <point key="canvasLocation" x="117.59999999999999" y="123.68815592203899"/>
         </scene>
-        <!--View Controller-->
+        <!--Vista 2-->
         <scene sceneID="5SX-Zo-Cc8">
             <objects>
-                <viewController id="Fpz-pX-DUm" sceneMemberID="viewController">
+                <viewController title="Vista 2" id="Fpz-pX-DUm" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="qHy-o8-Zgr"/>
                         <viewControllerLayoutGuide type="bottom" id="Z03-Dr-ydi"/>
@@ -97,11 +114,11 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="w3f-XT-cCU">
-                                <rect key="frame" x="8" y="10" width="62" height="30"/>
+                                <rect key="frame" x="149" y="282" width="64" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Regresar"/>
+                                <state key="normal" title="Siguiente"/>
                                 <connections>
-                                    <segue destination="BYZ-38-t0r" kind="show" id="KeD-VY-0oq"/>
+                                    <segue destination="98E-N5-qWs" kind="show" id="7y2-BZ-gLH"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -111,6 +128,52 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iXw-oy-760" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1020" y="124"/>
+        </scene>
+        <!--Vista 3-->
+        <scene sceneID="8xH-gv-P9H">
+            <objects>
+                <viewController title="Vista 3" id="98E-N5-qWs" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="2DF-Ws-wVT"/>
+                        <viewControllerLayoutGuide type="bottom" id="pDI-1w-Idp"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="VFu-qS-dLn">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TVp-oS-jfx">
+                                <rect key="frame" x="157" y="318" width="64" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Siguiente"/>
+                                <connections>
+                                    <segue destination="sNa-9C-niU" kind="show" id="d61-EW-Jca"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="PYU-tB-url" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1945" y="116"/>
+        </scene>
+        <!--Vista 4-->
+        <scene sceneID="G28-c8-HbQ">
+            <objects>
+                <viewController title="Vista 4" id="sNa-9C-niU" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="u0d-cl-Sft"/>
+                        <viewControllerLayoutGuide type="bottom" id="ZD4-2G-7U2"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Bdq-Wt-xWB">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="19E-Wr-GKk" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2882" y="116"/>
         </scene>
     </scenes>
     <resources>
