--- a/MenuWhatsUniversal/MenuWhatsUniversal/Base.lproj/Main.storyboard
+++ b/MenuWhatsUniversal/MenuWhatsUniversal/Base.lproj/Main.storyboard
@@ -10,7 +10,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Item-->
+        <!--Vista 4-->
         <scene sceneID="FMr-Rg-wJJ">
             <objects>
                 <viewController id="JsO-gu-2bc" sceneMemberID="viewController">
@@ -32,11 +32,28 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Item" id="5i9-1S-ILh"/>
+                    <tabBarItem key="tabBarItem" title="Vista 4" id="5i9-1S-ILh"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Kls-Xh-xdE" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-54" y="-815"/>
+        </scene>
+        <!--Xbox-->
+        <scene sceneID="Aez-y7-MwD">
+            <objects>
+                <navigationController id="4M0-ic-x2O" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Xbox" id="ekd-M9-NXD"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="eII-dp-YQm">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="654-GD-fSa" kind="relationship" relationship="rootViewController" id="ftR-rg-u6K"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="wN2-KV-eXI" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-865" y="798"/>
         </scene>
         <!--First-->
         <scene sceneID="hNz-n2-bh7">
@@ -91,7 +108,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="XBOX ONE" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="y90-EX-wNe">
-                                <rect key="frame" x="123" y="85" width="128" height="32"/>
+                                <rect key="frame" x="123" y="129" width="128" height="32"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="26"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -100,6 +117,14 @@
                                 <rect key="frame" x="67" y="220" width="240" height="227"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" heightSizable="YES" flexibleMaxY="YES"/>
                             </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RWq-r9-h9Z">
+                                <rect key="frame" x="261" y="539" width="88" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Negro?"/>
+                                <connections>
+                                    <segue destination="SH5-Rq-Ort" kind="show" id="1H6-w9-2JJ"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
@@ -109,10 +134,42 @@
                         </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Item" id="Pne-rG-nsM"/>
+                    <navigationItem key="navigationItem" id="15B-P1-tad"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="zwb-ww-SOa" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-10.4" y="798.35082458770626"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="TT4-W4-rsm">
+            <objects>
+                <viewController id="SH5-Rq-Ort" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="I9j-iy-ekl"/>
+                        <viewControllerLayoutGuide type="bottom" id="67f-hB-pNJ"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="g0g-A9-JQi">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="xbox.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="0dE-bY-PTP">
+                                <rect key="frame" x="67" y="220" width="240" height="227"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" heightSizable="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="XBOX ONE" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="m3A-3S-orG">
+                                <rect key="frame" x="123" y="137" width="128" height="32"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="26"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="FLW-RC-mne" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="761" y="1058"/>
         </scene>
         <!--Second-->
         <scene sceneID="wg7-f3-ORb">
@@ -167,8 +224,8 @@
                     <connections>
                         <segue destination="9pv-A4-QxB" kind="relationship" relationship="viewControllers" id="u7Y-xg-7CH"/>
                         <segue destination="8rJ-Kc-sve" kind="relationship" relationship="viewControllers" id="lzU-1b-eKA"/>
-                        <segue destination="654-GD-fSa" kind="relationship" relationship="viewControllers" id="plQ-ZU-d47"/>
-                        <segue destination="JsO-gu-2bc" kind="relationship" relationship="viewControllers" id="Du2-1g-U1J"/>
+                        <segue destination="4M0-ic-x2O" kind="relationship" relationship="viewControllers" id="Iwx-Vm-cjP"/>
+                        <segue destination="JsO-gu-2bc" kind="relationship" relationship="viewControllers" id="1rK-3w-KM2"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="HuB-VB-40B" sceneMemberID="firstResponder"/>
@@ -180,5 +237,6 @@
         <image name="first" width="30" height="30"/>
         <image name="logoverde.png" width="2000" height="1977"/>
         <image name="second" width="30" height="30"/>
+        <image name="xbox.jpg" width="626" height="626"/>
     </resources>
 </document>
