--- a/MenuWhatsUniversal/MenuWhatsUniversal/Base.lproj/Main.storyboard
+++ b/MenuWhatsUniversal/MenuWhatsUniversal/Base.lproj/Main.storyboard
@@ -80,6 +80,14 @@
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="m0b-Pv-NgP">
+                                <rect key="frame" x="129" y="444" width="119" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Mensaje"/>
+                                <connections>
+                                    <action selector="mostrarMensaje:" destination="9pv-A4-QxB" eventType="touchUpInside" id="8lq-uY-asl"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
@@ -93,7 +101,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="W5J-7L-Pyd" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="750" y="-320"/>
+            <point key="canvasLocation" x="749.60000000000002" y="-320.68965517241384"/>
         </scene>
         <!--Item-->
         <scene sceneID="iG9-v7-Ygt">
